Mobile fixes, notably making the logo and search bar display properly on mobile and adding buttons to open and close the abstract sidebar

--- a/static/all.css
+++ b/static/all.css
@@ -39,7 +39,7 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
-input {
+input, .button {
     font-size: clamp(14px, 1.4vw, 2rem);
     margin-top: 1rem;
     padding: .4rem;
@@ -54,7 +54,7 @@ input[name="q"] {
     border-bottom: 3px solid #fff3;
     background: #0000;
 }
-input:focus {
+input:focus,.button:focus {
     outline: none;
     border: none;
     border-bottom: 3px solid #ffffff01;
@@ -62,7 +62,7 @@ input:focus {
     0 .25rem 0 #fc0101,
     0 .35rem 0 #0000ff;
 }
-input[type="button"]:hover,input[type='submit']:hover {
+input[type="button"]:hover, .button:hover,input[type='submit']:hover {
     outline: none;
     border: none;
     border-bottom: 3px solid #ffffff01;
